# BackendFungi/Contracts/Requests/MushroomsRequests/GetMyFavoriteMushroomsRequest.cs
@@ -1,0 +1,16 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace BackendFungi.Contracts.Requests.MushroomsRequests;
+
+public record GetMyFavoriteMushroomsRequest
+{
+    private const int DefaultPage = 1;
+    private const int DefaultPageSize = 12;
+    private const int MaxPageSize = 100;
+
+    [Range(1, int.MaxValue)]
+    public int Page { get; init; } = DefaultPage;
+
+    [Range(1, MaxPageSize)]
+    public int PageSize { get; init; } = DefaultPageSize;
+}
