# BackendFungi/Contracts/Responses/ArticlesResponses/GetMyFavoriteArticlesResponse.cs
@@ -1,0 +1,18 @@
+namespace BackendFungi.Contracts.Responses.ArticlesResponses;
+
+public record FavoriteArticleItemDto(
+    Guid ArticleId,
+    string Title,
+    string AuthorString,
+    DateTime PublishDate,
+    string HeaderPhotoLink,
+    DateTime LikedAt,
+    int LikesCount
+);
+
+public record GetMyFavoriteArticlesResponse(
+    List<FavoriteArticleItemDto> Items,
+    int TotalCount,
+    int Page,
+    int PageSize
+);
